# wasm-postgres-bridge

./: .env.example  .gitignore  README.md  TESTING_GUIDE.md  debug-websocket-client.js  docker-compose.yml  jest.config.js  package-lock.json  package.json  test-websocket-client.js  test-websocket-db.js  tsconfig.json
docs/: SECURITY.md  TROUBLESHOOTING.md  TUTORIAL.md
examples/: README.md  database-playground.html  performance-monitoring-demo.ts  security-demo.ts  start-secure-server.ts  start-websocket-server.ts  wasm-browser-demo.html  wasm-database-cli-demo.ts  wasm-demo.ts  wasm-simple-demo.html  wasm-websocket-database-demo.html  websocket-demo.ts
scripts/: setup-db.sh  start-browser-demo.sh  verify-setup.js
src/: index.ts
src/database/: client.ts  performance-monitor.ts  schema.sql
src/integration/: bridge.ts
src/security/: auth.ts  validation.ts
src/wasm/: loader.ts
src/websocket/: client.html  secure-server.ts  server.ts
tests/: browser-integration.html  database.test.ts  integration.test.ts  setup.ts  wasm.test.ts  websocket.test.ts
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
