[package]
name = "wasm_postgres_learning"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "WebSocket",
  "MessageEvent",
  "ErrorEvent",
  "CloseEvent",
  "BinaryType",
  "Window",
]
